Utworzono za pomocą Colab

--- a/intro.ipynb
+++ b/intro.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyN9F9iQAnFSsiheqdr0SCOU",
+      "authorship_tag": "ABX9TyPs5RLpCsURaJTayWqkmctn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -48,6 +48,15 @@
       "source": [
         "print(\"Hello colab\")"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Test"
+      ],
+      "metadata": {
+        "id": "mS3lOV_8ELAH"
+      }
     }
   ]
 }
